examples/ec2/namespaced/v1beta1/route.yaml
# SPDX-FileCopyrightText: 2024 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0

apiVersion: ec2.aws.m.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: ec2/v1beta1/route
    uptest.upbound.io/disable-import: "true"
  name: route
  namespace: upbound-system
spec:
  forProvider:
    region: us-west-1
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: routegw
    routeTableIdRef:
      name: table
